--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,10 @@ body {
   text-decoration: none;
 }
 
+.button2 {
+  display: inline-block;
+}
+
 .buttons a:nth-child(1) {
   padding: 0.8rem 1rem;
   background-color: var(--Bright-blue);
